[package]
name = "rust-month-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
regex = "*"
# default-features = false to get rid of colored output
clap = { version = "*", default-features = false, features = ["std", "derive"] }
#home = "*"
